--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D_Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1>WELCOME TO</h1>
+
+            <h1> <span class="spann"> Ador Shohag</span> World</h1>
+            <h3>Buid Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.</p>
+            <a href="#" class="button">Hire ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/shohag.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
